------------------

- Use TinyMCE compressor to provide editor and plugins
  [tom_gross]

- Fixed http://dev.plone.org/plone/ticket/11681
  [tom_gross]


1.2.10 (unreleased)
------------------

- Fixed AttributeError: 'ATDocumentFieldsView' object has no attribute
  'absolute_url' when using inline editing.  Inline editing then still
  does not work though (checked on Plone 4.2 dev).
  [maurits]

- Initialize TinyMCE with "media_strict: false" to allow embed tags if
  they are removed from the list of nasty tags.
  Fixeѕ https://dev.plone.org/ticket/10681
  [rochecompaan]


1.2.9 (2011-11-24)
------------------

- Fixed content_css when the Plone Site id is 'plone'.  This is used
  to display the text during editing in the same layout as it appears
  when viewing.
  Fixes http://dev.plone.org/plone/ticket/11430
  [maurits]

- Include Products.CMFCore's permissions.zcml to ensure Plone 4.1 compatibility.
  [thomasdesvenain]

- Use aq_parent instead of getParentNode for Zope trunk compatibility.
  [elro]

- Search does not work with Virtual Hosting (close #10308)
  [keul] [mamico]

1.2.8 (2011-09-19)
------------------

- Support RichTextValues from plone.app.textfield when determining the mimetype
  of the field being edited.
  [davisagli]


1.2.7 (2011-07-05)
------------------

- Do not give a TypeError 'Could not adapt' when trying to adapt a
  context that is not adaptable to IJSONFolderListing and friends.
  Instead return nothing in the ajax call.
  [maurits]

- pep8
  [iElectric]

- Ported tests from doctests to unittests
  [iElectric]

- Add hook to JSONDetails to allow subclasses to supplement or override the results
  [anthonygerrard]

1.2.6 (2011-05-12)
------------------
- Changed the color of the background on the external editor to light gray to make the buttons more visible.
  [davidjonas]


1.2.5 (2011-05-12)
------------------

- Add a CSS class to the `Edit without visual editor` note.
  [hannosch]
